--- a/stickyimage.html
+++ b/stickyimage.html
@@ -14,7 +14,7 @@ img.sticky {
 <body>
 <h2>Cara Mudah Membuat Sticky Image Yang Sangat Elegan</h2>
 <p>Sticky Image adalah tampilan gambar di atas artikel yang selalu tampil ketika kursor kita gulir kebawah maupun ke atas.</p>
-<img class="sticky" src="https://1.bp.blogspot.com/-9UyjuH_778s/XLcz4kNGYkI/AAAAAAAABGU/axtUazAVO6wLT9lWmAykk8mdXUyYf7IegCLcBGAs/s1600/Anonymous.jpeg" alt="Cara Mudah Membuat Sticky Image Yang Sangat Elegan">
+<img class="sticky" src="https://1.bp.blogspot.com/-9UyjuH_778s/XLcz4kNGYkI/AAAAAAAABGU/axtUazAVO6wLT9lWmAykk8mdXUyYf7IegCLcBGAs/s1600/Anonymous.jpeg" alt="Cara Mudah Membuat Sticky Image Yang Sangat Elegan" title="Cara Mudah Membuat Sticky Image Yang Sangat Elegan">
 <h2>Gulir ke bawah</h2>
 <p>Artikel hanya contoh</p>
 <p><b>Gulir ke atas lagi untuk memposisikan gambar seperti semula</b></p>
