Update Tombol Menu Dropdowns.html

--- a/Tombol Menu Dropdowns.html
+++ b/Tombol Menu Dropdowns.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <style>
 .btn {
   background-color: #2196F3;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  padding: 8px;
+  font-size: 14px;
   border: none;
   outline: none;
 }
@@ -28,7 +28,7 @@
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 8px 10px;
   text-decoration: none;
   display: block;
 }
@@ -49,7 +49,7 @@
 <h2>Cara Sederhana Membuat Tombol Menu Dropdowns</h2>
 <p>Gerakkan mouse ke ikon panah bawah untuk membuka <b>Tombol Menu Dropdowns</b>.</p>
 
-<button class="btn">Button</button>
+<button class="btn">Tombol</button>
 <div class="dropdown">
   <button class="btn" style="border-left:1px solid #0d8bf2">
     <i class="fa fa-caret-down"></i>
