Update Read More Read Less Button 1.html

--- a/Read More Read Less Button 1.html
+++ b/Read More Read Less Button 1.html
@@ -74,7 +74,7 @@ button {
 </head>
 <body>
 
-<h2>Membuat Read More Read Less Dengan Tampilan Button Yang Menarik</h2>
+<h2>Membuat Read More Read Less Dengan Tampilan Button #1</h2>
 <p>Jika kalian berkenan silahkan kunjungi Blog maupun Website kami yang lainnya<span id="dots">...</span><span id="more"> www.idanime.net, www.legendseo.net, www.westernblog.xyz dan www.idviral.site. Selain itu kunjungi fanspage kami di <a href="https://www.facebook.com/indonesiaberitaterkini/" target="new">Status Indonesia.</a></span></p>
 <button class="green" onclick="myFunction()" id="myBtn">Baca Selengkapnya</button>
 
