--- a/Image Bergerak.html
+++ b/Image Bergerak.html
@@ -25,7 +25,7 @@ img:hover {
 </head>
 <body>
 
-<p>Hover over the image:</p>
+<p>Cara Membuat Gambar / Image Pada Blog Anda Bergerak Sendiri Ketika Disorot</p>
 <img src="https://scontent.fsub8-1.fna.fbcdn.net/v/t1.0-9/56669472_10214121864667537_6741936449454604288_n.jpg?_nc_cat=104&_nc_oc=AQmDP5UJxcNzITN9c1HMwvhlXeRqqeL3ofHsJ73dVWeam7yXuu7IdCXBkfiUfMgGLoc&_nc_ht=scontent.fsub8-1.fna&oh=ddd7bca583c6cda32723c39644b82f8c&oe=5D7B94B7" alt="Pineapple" width="300" height="300">
 
 </body>
